<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MileStoneActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_top"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/iv_arrow_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/ArImg"
                android:src="@drawable/ic_arrow_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_lock"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:src="@drawable/ic_lock_blue"
                app:layout_constraintLeft_toRightOf="@+id/iv_arrow_back"
                app:layout_constraintRight_toLeftOf="@+id/iv_option"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/rounded_image" />

            <ImageView
                android:id="@+id/iv_option"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:onClick="showPopup"
                android:contentDescription="@string/OpImage"
                android:src="@drawable/ic_more_vert_white"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tvTask"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@id/iv_lock"
                app:layout_constraintRight_toRightOf="@id/iv_lock"
                app:layout_constraintTop_toBottomOf="@id/iv_lock" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tvTitle"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="@id/tv_task"
                app:layout_constraintRight_toRightOf="@id/tv_task"
                app:layout_constraintTop_toBottomOf="@id/tv_task" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_parameter"
                android:layout_width="20dp"
                android:layout_height="80dp"
                android:layout_marginTop="12dp"
                android:background="@color/white"
                android:visibility="visible"
                app:cardCornerRadius="50dp"
                app:layout_constraintLeft_toLeftOf="@id/tv_title"
                app:layout_constraintRight_toRightOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <View
                    android:id="@+id/v_fill"
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:background="#61001AFF"
                    android:visibility="visible" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/fillPercent"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/cv_parameter"
                app:layout_constraintLeft_toRightOf="@+id/cv_parameter"
                app:layout_constraintTop_toTopOf="@+id/cv_parameter"
                app:layout_constraintVertical_bias="0.75" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <com.github.jhonnyx2012.horizontalpicker.HorizontalPicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_top" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/MyFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#373737"
        android:contentDescription="@string/fa_button"
        android:src="@drawable/ic_add_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>